# src/main/java/com/vasquez/msaccount/proxy/model/ProductResponse.java
@@ -2,13 +2,19 @@ package com.vasquez.msaccount.proxy.model;
 
 import lombok.Data;
 
+/**
+ * Credit card response.
+ *
+ * @author Vasquez
+ * @version 1.0.
+ */
 @Data
 public class ProductResponse {
 
-    private String productId;
+  private String productId;
 
-    private String productTypeId;
+  private String productTypeId;
 
-    private String name;
+  private String name;
 
 }
